# monte-carlo-raytracer

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/cameras/: mod.rs  pinhole.rs  thin_lense.rs
src/io/: export.rs
src/materials/: mod.rs  phong.rs  phong_with_refraction.rs
src/objects/: mod.rs  scene.rs  sphere.rs  traits.rs
src/primitives/: intersection.rs  mod.rs  ray.rs  vec.rs
src/renderer/: combined_renderer.rs  fixed_samples.rs  image.rs  mod.rs  raw.rs  std_div_renderer.rs
