[package]
name = "raytracer"
version = "0.1.0"
authors = ["Maximilian von Gaisberg <github@vongaisberg.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rayon = "1.1"
image = "*"
threadpool = "1.7.1"
num = "0.3.0"
crossbeam = "0.8"
atomic-counter = "1.0.1"